# Light2D

./: .gitmodules  CMakeLists.txt  LICENSE  MainGame.cpp  MainGame.h  README.md  light.json  main.cpp
app/: CMakeLists.txt  Input.cpp  Input.h  JsonToValue.cpp  JsonToValue.hpp  MainGame.cpp  MainGame.h
lib/: CMakeLists.txt  liblight.cpp  liblight.h
res/maps/: extrem.json  main.json  triangles.json
res/shaders/: blockBlack.frag  screen.frag  screen.vert  terrain.frag  terrain.vert
shader_doc/: shader_doc.md
